Fixed submenu alignment

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ a:active {
 
 .menu ul {
 	margin-top: 1px;
-	min-width: 87px;
+	min-width: 88px;
 	width: 92px;
 	width: auto;
 }
@@ -256,7 +256,7 @@ ul.menu > li:hover a {
 }
 
 #menu-item-33 .sub-menu {
-	width: 149px;
+	width: 148px;
 }
 
 /* =Top Menu
